Updating init rules

--- a/v2.md
+++ b/v2.md
@@ -9,8 +9,10 @@
 
 The project-level state machine tracks the following phases. `run` advances through them, in order, replacing the previous
 `plan` interface with one phase-aware command. On the CLI, that now looks like:
-1. `gov init` -> creates `_governator/` and its layout (`_durable_state`, `_local_state`, roles, custom prompts, docs,
-   plan prompts, templates, etc.).
+1. `gov init` -> creates `_governator/` and its layout (`_durable-state`, `_local-state`, architecture, adr, plan, task,
+   roles, custom prompts, prompts, templates, reasoning, etc.), adds `_governator/.gitignore` to keep `_local-state/*`
+   out of Git while preserving `_local-state/.keep`, and drops the legacy `_governator/docs`/`_governator/config`
+   directories in favor of the new structure.
 2. `gov run` -> dispatches one async agent to perform the architecture baseline.
 3. `gov run` -> dispatches one async agent to perform gap analysis.
 4. `gov run` -> dispatches one async agent to perform project planning (milestones/roadmap).
@@ -25,7 +27,7 @@ At the start of each phase (2-5), `gov run` validates the promised artifacts fro
 least one `_governator/tasks/*` entry for Phase 4). Missing artifacts or a still-running agent process prevent the tracker
 from advancing and surface an error to the operator so the phase can be corrected before continuing.
 
-The phase tracker is stored under `_governator/_durable_state/phase-state.json`. Each `gov run` reads that file,
+The phase tracker is stored under `_governator/_durable-state/phase-state.json`. Each `gov run` reads that file,
 reports “phase x running,” records the PID/timestamps of whichever agent executed the phase, and refuses to start a new
 phase until the prior phase's validations pass and its agent has finished.
 
