--- a/v2.md
+++ b/v2.md
@@ -1,52 +1,37 @@
 ## Governator Project Phases:
-0. new/initialized
-1. architecture baseline
-2. gap analysis
-3. project planning
-4. task planning
-5. execution
-6. complete
+1. Planning
+2. Execution
 
-The project-level state machine tracks the following phases. `run` advances through them, in order, replacing the previous
-`plan` interface with one phase-aware command. On the CLI, that now looks like:
-1. `gov init` -> creates `_governator/` and its layout (`_durable-state`, `_local-state`, architecture, adr, plan, task,
-   roles, custom prompts, prompts, templates, reasoning, etc.), adds `_governator/.gitignore` to keep `_local-state/*`
-   out of Git while preserving `_local-state/.keep`, and drops the legacy `_governator/docs`/`_governator/config`
-   directories in favor of the new structure.
-2. `gov run` -> dispatches one async agent to perform the architecture baseline.
-3. `gov run` -> dispatches one async agent to perform gap analysis.
-4. `gov run` -> dispatches one async agent to perform project planning (milestones/roadmap).
-5. `gov run` -> dispatches one async agent to perform task planning.
-While unfinished tasks:
-6. (repeated) `gov run` -> dispatches one or more parallel async agents to perform task execution.
-When all tasks are complete:
--> marks the system implementation as complete.
+### Planning
+Governator provides a repeatable methodology for project planning.
 
-At the start of each phase (2-5), `gov run` validates the promised artifacts from the previous phase
-(e.g., `arc42.md` for Phase 1, a gap report for Phase 2, at least one milestone/epic document for Phase 3, and at
-least one `_governator/tasks/*` entry for Phase 4). Missing artifacts or a still-running agent process prevent the tracker
-from advancing and surface an error to the operator so the phase can be corrected before continuing.
+Planning is opinionated by default, but totally configurable. Planning is treated mechanically by the system as a single
+"task," where each step of planning acts like a unique "status." Therefore, every planning step is carried out
+sequentially and the workers are managed (branches, worktrees, file structure) exactly the way they are for execution.
 
-The phase tracker is stored under `_governator/_durable-state/phase-state.json`. Each `gov run` reads that file,
-reports “phase x running,” records the PID/timestamps of whichever agent executed the phase, and refuses to start a new
-phase until the prior phase's validations pass and its agent has finished.
+By default, planning consists of:
+1. Architecture Baseline - discovers or invents the system architecture
+2. Gap Analysis - identifies the deltas (along with unknowns) between current and desired state
+3. Project Planning - creates the project roadmap (milestones, epics, features)
+4. Task Planning - generates individual tasks for execution
 
-Phase 1-5 invoke a single worker agent, serially, and block until each phase is complete. Phase 6 may involve
-many parallel agents working simultaneously across open tasks.
+Governator validates that each step of planning has been completed before moving on to the next step.
 
-At any given point (after `init`), a new command `review` may be run which invokes a realtime chat session between an
-agent and the operator. The agent is instructed to ingest and analyze the current (to that point) state of the system
-including all artifacts and source, and then system-prompted to ask and answer questions about the state of the project
-for purposes of alignment and refinement.
+### Execution
+Execution is the primary workhorse of Governator. Governator dispatches asynchronous agent workers to move a task
+through the execution lifecycle (backlog, triaged, implemented, tested, reviewed, mergeable, merged). Each task lives in
+a stable git branch/worktree through its lifecycle, no matter how many workers or state transitions it goes through.
 
-Notes:
--`review` should be blocked **during** Phases 2-5. In other words, the system should disallow review while there is
-active analysis and planning, but allow review during task execution.
-- `review` is a future state command, not to be implemented right now.
+Governator may (if configured) automatically dispatch multiple workers to execute tasks in parallel.
 
-As before, `GOVERNATOR.md` remains the ultimate intent-carrier for all synthesis and verification within the system.
+### Review
+At any given point, a new command `review` may be run which, provided there are no tasks in progress, invokes a realtime
+chat session between you and a new agent. The agent is instructed to ingest and analyze the current state of the project
+so that you may ask questions, clarify, and drive refinements.
 
-**Note:** This guidance mirrors the forthcoming v2.0 flow; legacy code, existing processes, and any in-flight governed repositories remain unchanged, so there is nothing to worry about while we implement this new iteration.
+_Note: `review` will return failure if there are any active agents within the project._
+
+`GOVERNATOR.md` remains the ultimate intent-carrier for all synthesis and verification within the system.
 
 ## Task Lifecycle
 Task states:
@@ -65,18 +50,22 @@ Tasks may have attributes, such as:
 - pid (process id, when an agent is working on a task)
 
 The `status` command should report:
-- Number of backlog tasks
-- Number of merged tasks
-- Number of tasks in progress (all tasks which are not backlog or merged)
-- A table of tasks in progress with columns: id, state, pid, role, attrs, title
-  - tasks sorted first by status (ascending), and then by id (ascending)
-  - pid and role should be blank for tasks with no current working agent
-  - attrs should be comma-joined (no spaces) and blank if there are no attributes; show only:
-    - blocked
-    - merge_conflict
-    - (any future boolean flags in the same format)
-  - title should be truncated such that the table fits on screen (if truncated, append "...")
-  - status ordering is triaged (0), implemented (1), tested (2), reviewed (3), mergeable (4)
+- Current phase (planning or execution)
+- If planning,
+  - An enumeration, in order, of all configured planning steps, and whether they are (complete, in progress, or open)
+- If execution,
+  - Number of backlog tasks
+  - Number of merged tasks
+  - Number of tasks in progress (all tasks which are not backlog or merged)
+  - A table of tasks in progress with columns: id, state, pid, role, attrs, title
+    - tasks sorted first by status (ascending), and then by id (ascending)
+    - pid and role should be blank for tasks with no current working agent
+    - attrs should be comma-joined (no spaces) and blank if there are no attributes; show only:
+      - blocked
+      - merge_conflict
+      - (any future boolean flags in the same format)
+    - title should be truncated such that the table fits on screen (if truncated, append "...")
+    - status ordering is triaged (0), implemented (1), tested (2), reviewed (3), mergeable (4)
 
 ## Agent Concerns
 CLI coding agents to be supported:
@@ -84,25 +73,11 @@ CLI coding agents to be supported:
 - Claude Code
 - Gemini CLI
 
-The first time a triaged task is dispatched to a worker, a working branch and git worktree should be created for that
-task; this branch and worktree should remain active and stable across the entire task lifecycle.
+The first time a task is dispatched to a worker, a working branch and git worktree should be created for that task; this
+branch and worktree should remain active and stable across the entire task lifecycle.
 
 Each worker agent is spawned non-interactively (e.g. `codex exec`, `claude --print`, etc.), and must be spawned
-asynchronously so that the Governator CLI does not block; this also becomes a crucial detail to allow parallelism in
-Phase 5. Governator should construct the agent prompt from concatenating the contents of these files, in order:
-1. the appropriate reasoning effort prompt file (only for Claude and Gemini; Codex CLI has a native dedicated
-   `model_reasoning_effort` configuration parameter that can be overridden/set at invocation time)
-2. the worker contract prompt
-3. the worker role prompt
-4. the global custom prompt
-5. the role-override custom prompt
-6. the task file/prompt
-
-Notes for clarity:
--This process it not just for task execution in Phase 5; architecture baseline, gap analysis, project
-planning, and task planning all follow this same pattern - we're just passing in a special pre-generated, human-curated
-"task" file at the end.
-- The `review` subcommand does not follow this pattern.
+asynchronously so that the Governator CLI does not block; this also becomes a crucial detail to allow parallelism.
 
 ## Open Questions:
 - Is the system prompt for `review` one that puts the agent in charge (asking the operator clarifying questions to guide
